<resources>
    <string name="app_name">Sigap</string>
    <string name="action_settings">Settings</string>
    <string name="create_account"><u>Click here to create an account</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="have_account">Have an account?</string>
    <string name="copy_rights">© SatuSatuDua 2015</string>
    <string name="masuk">Masuk</string>
    <string name="buat_akun">Klik disini untuk membuat akun</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="daftar">Daftar</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="submit">Submit</string>
    <string name="simpan">Simpan</string>
    <string name="mohon_isi">Mohon isi form ini</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="masukan_email_kontak">Masukan email daftar kontak terpercaya anda, 3 hingga 5 kontak yang akan di hubungi jika kondisi bahaya terjadi pada anda.</string>
    <string name="masukan_email_hint">Masukan email kontak terpercaya anda</string>
    <string name="tambah_kontak">TAMBAHKAN KONTAK</string>
    <string name="daftar_kontak">Daftar Kontak Terpercaya</string>
    <string name="no_ponsel">No Ponsel</string>
    <string name="kawal_aku">Kawal Aku</string>

    <string-array name="shake_count">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
